# galeShapley

./: .gitignore  COMP 3600 Optional Assignment.ipynb  README.md  Untitled.ipynb  galeShapley.cabal  galeShapley.py  stack.yaml
.ipynb_checkpoints/: COMP 3600 Optional Assignment-checkpoint.ipynb  Untitled-checkpoint.ipynb
src/: GaleShapley.hs  Generator.hs
