name:                galeShapley
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/galeShapley#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Power
maintainer:          me@danielpower.ca
copyright:           2022 Daniel Power
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable generate
  hs-source-dirs:      src
  main-is:             Generator.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       random,
                       random-shuffle

executable galeShapley
  hs-source-dirs:      src
  main-is:             GaleShapley.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       split
